# csv_utils

./: .gitignore  .rubocop.yml  Cargo.toml  Dockerfile  Gemfile  LICENSE.txt  README.md  Rakefile  csv_utils.gemspec  csv_validator.gemspec
ext/csv_utils/: Cargo.toml  extconf.rb
ext/csv_utils/src/: binary_copy_file_writer.rs  generator.rs  geometry.rs  lib.rs  postgres_copier.rs  sorter.rs  validator.rs
ext/csv_validator/: Cargo.toml  extconf.rb
ext/csv_validator/src/: lib.rs  sorter.rs
lib/: csv_utils.rb  csv_validator.rb
lib/csv_utils/: error.rb  generator.rb  sorter.rb  validator.rb  version.rb
lib/csv_validator/: error.rb  generator.rb  validator.rb  version.rb
sig/: csv_utils.rbs  csv_validator.rbs
spec/: csv_validator_spec.rb  generator_spec.rb  sorter_spec.rb  spec_helper.rb  validator_spec.rb
