[package]
name = "csv_utils"
version = "0.1.0"
edition = "2021"
authors = ["Michael Nutt <michael@nuttnet.net>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7.1"
csv = "1.3.1"
url = "2.5.4"
tempfile = "3.9.0"
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sha1 = "0.10.5"
